# MultitaskVision

./: .gitignore  README.md  deploy.py  pyproject.toml  train.py  visualize.py
configs/: deploy.py  det_seg_depth.py  det_seg_depth_mmlab.py  det_seg_depth_mmlab_qat.py  det_seg_depth_quick.py
multitask_vision/: __init__.py  adapters.py  compression.py  losses.py  model.py  registry.py  visualization.py
multitask_vision/blocks/: __init__.py  backbones.py  heads.py  necks.py
scripts/: download_data.sh
tests/: test_model_compression.py  test_model_graph.py  test_pruning.py  test_qat.py
